# zephyr

./: Makefile  west.yml
arch/: Kconfig
arch/arm64/core/: smp.c
boards/arm/mps3_an547/: mps3_an547.dts  mps3_an547_defconfig
boards/arm64/fvp_base_revc_2xaemv8a/: board.cmake  fvp_base_revc_2xaemv8a.dts  fvp_base_revc_2xaemv8a_smp_ns_defconfig
boards/arm64/fvp_corstone1000_a35/: .Kconfig.board.kak.heZVQl  0001-Corstone-1K-tfm-fixes.patch  0001-Corstone1K-Fix-compiler-warnings.patch  0001-Corstone1K-TFA-patches.patch  Kconfig.board  Kconfig.defconfig  board.cmake  fvp_corstone1000_a35.dts  fvp_corstone1000_a35.yaml  fvp_corstone1000_a35_defconfig
boards/arm64/fvp_corstone1000_a35/doc/: index.rst
cmake/: dts.cmake
cmake/emu/: armfvp.cmake
cmake/modules/: zephyr_module.cmake
drivers/flash/: Kconfig.stm32fxx  flash_stm32.c  flash_stm32.h  flash_stm32f4x.c  flash_stm32l4x.c
drivers/interrupt_controller/: intc_gicv3.c
dts/arm64/fvp/: fvp-aemv8r.dtsi
dts/bindings/arm/: arm,ethos-u.yaml
modules/: Kconfig
modules/hal_ethos_u/: CMakeLists.txt  Kconfig  init.c
modules/tflite-micro/: CMakeLists.txt
modules/trusted-firmware-a/: CMakeLists.txt  Kconfig
modules/trusted-firmware-m/: CMakeLists.txt  Kconfig.tfm
modules/trusted-firmware-m/interface/: interface.c
samples/tflm_ethosu/: CMakeLists.txt  README.md  prj.conf
samples/tflm_ethosu/src/: inference_process.cpp  inference_process.hpp  main.cpp
scripts/dts/: gen_defines.py
soc/arm64/arm/fvp_aemv8a/: CMakeLists.txt  Kconfig.soc  soc.c
soc/arm64/arm/fvp_corstone1000/: Kconfig.defconfig.series  (+2 more)
(+11 files in other folders)
